# aioffice

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: publish.yml
docs/: dynamic-fields.md  header-footer.md  native-header-footer-binding.md  native-header-footer-cloning.md  native-header-footer-creation.md  native-images.md  native-list-insertion.md  native-rendering.md  native-roundtrip.md  native-section-insertion.md  native-table-insertion.md  native-text-insertion.md  paragraph-surfaces.md  section-layout.md  structural-editing.md  style-rendering.md  table-cells.md  table-layout.md
examples/: report.json
src/aioffice/: __init__.py  __main__.py  _version.py  styles.py
src/aioffice/cli/: __init__.py  main.py
src/aioffice/core/: __init__.py  diagnostics.py  diff.py  errors.py  ids.py
src/aioffice/documents/: __init__.py  assets.py  builder.py  document.py
src/aioffice/formats/: __init__.py  docx.py  docx_borders.py  docx_fields.py  docx_header_footer.py  docx_images.py  docx_import.py  docx_named_styles.py  docx_native.py  docx_section.py  docx_style.py  docx_tables.py  html.py  markdown.py
tests/: test_cli.py  test_document.py  test_docx_images.py  test_fields.py  test_formats.py  test_headers_footers.py  test_ids.py  test_named_styles.py  test_native_docx.py  test_native_rendering.py  test_paragraph_surfaces.py  test_patch.py  test_sections.py  test_security.py  test_styles_rendering.py  test_table_borders.py  test_table_cells.py  test_tables.py  test_text_ranges.py  test_workspace.py
(+23 files in other folders)
