[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "aioffice"
dynamic = ["version"]
description = "An AI-native, declarative document engine for creating and validating office artifacts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "defusedxml>=0.7.1,<1",
    "pydantic>=2.7,<3",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ai", "office", "docx", "document", "agent"]

[project.optional-dependencies]
render = [
    "Pillow>=10,<13",
]
dev = [
    "build>=1.2,<2",
    "pyright>=1.1.400,<2",
    "ruff>=0.15,<1",
    "twine>=5,<7",
]

[project.scripts]
aioffice = "aioffice.cli:main"

[tool.setuptools.dynamic]
version = {attr = "aioffice._version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aioffice = ["py.typed"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
